...
                Text(character.species)
                    .font(.subheadline)
                    .foregroundStyle(Color.secondary)
            }
        }
        .accessibilityAddTraits(.isButton)
        .accessibilityIdentifier("CharacterGridItem")
    }
}

#Preview {
    CharacterGridItem(
        character: RickAndMortyCharacter(
...
